feat: hide the link to the accessibility statement

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,10 +15,10 @@ const termsNavigation = [
     name: t('footer.navigation.terms.dataProtection'),
     href: translatePath('/tietosuoja'),
   },
-  {
-    name: t('footer.navigation.terms.accessibilityStatement'),
-    href: translatePath('/saavutettavuusseloste'),
-  },
+  // {
+  //   name: t('footer.navigation.terms.accessibilityStatement'),
+  //   href: translatePath('/saavutettavuusseloste'),
+  // },
 ];
 ---
 
