build(deps): update to Tailwind v3.4.0

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -33,7 +33,7 @@ const navigation = [
         navigation.map((link) => (
           // eslint-disable-next-line jsx-a11y/anchor-has-content
           <a
-            class="mx-2 text-xl text-red-950 hover:underline focus:underline dark:text-red-100 sm:mx-4"
+            class="mx-2 text-xl text-red-950 hover:underline focus:underline sm:mx-4 dark:text-red-100"
             href={link.href}
             set:text={link.name}
           />
