--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,41 +1,40 @@
 ---
-import { isRouteHome } from '../utils';
+import { getEntry } from "astro:content";
+import { isRouteHome } from "../utils";
 import {
   getLocaleFromUrl,
   getRouteFromUrl,
   useTranslatedPath,
   useTranslations,
-} from '../utils/i18n';
+} from "../utils/i18n";
 
 const locale = getLocaleFromUrl(Astro.url);
-const t = useTranslations(locale);
+const t = await useTranslations(locale, "layout");
 const translatePath = useTranslatedPath(locale);
 const currentRoute = getRouteFromUrl(Astro.url);
 
 const isHome = isRouteHome(currentRoute as string);
-const headerTitle = t('navigation.global.title');
+const headerTitle = t("navigation.global.title");
 
-const navigation = [
-  { name: t('about.title'), href: translatePath('/minusta') },
-];
+const navigation = await getEntry("navigation", `${locale}/global`);
 ---
 
 <header>
   <nav
     class="mx-auto flex max-w-prose items-center justify-between px-4 py-10"
-    aria-label={t('navigation.global.label')}
+    aria-label={navigation?.data.label}
   >
-    <a class="text-xl hover:underline focus:underline" href={translatePath('/')}
+    <a class="text-xl hover:underline focus:underline" href={translatePath("/")}
       >{isHome ? <h1>{headerTitle}</h1> : headerTitle}</a
     >
     <div class="hidden">
       {
-        navigation.map((link) => (
+        navigation?.data.links.map((link) => (
           // eslint-disable-next-line jsx-a11y/anchor-has-content
           <a
             class="mx-2 text-xl text-red-950 hover:underline focus:underline sm:mx-4 dark:text-red-100"
             href={link.href}
-            set:text={link.name}
+            set:text={link.label}
           />
         ))
       }
