--- a/src/components/SocialMedia.astro
+++ b/src/components/SocialMedia.astro
@@ -1,8 +1,8 @@
 ---
-import { social } from '../data/contact';
-import { getLocaleFromUrl, useTranslations } from '../utils/i18n';
-import Instagram from './social-icons/Instagram.astro';
-import Threads from './social-icons/Threads.astro';
+import { social } from "../data/contact";
+import { getLocaleFromUrl, useTranslations } from "../utils/i18n";
+import Instagram from "./social-icons/Instagram.astro";
+import Threads from "./social-icons/Threads.astro";
 
 interface Props {
   class?: string;
@@ -11,16 +11,16 @@ interface Props {
 const { class: className } = Astro.props;
 
 const locale = getLocaleFromUrl(Astro.url);
-const t = useTranslations(locale);
+const t = await useTranslations(locale, "layout");
 ---
 
-<div class:list={['flex gap-6', className]}>
+<div class:list={["flex gap-6", className]}>
   <a
     class="hover:text-red-700 focus:text-red-700 hover:dark:text-red-400 focus:dark:text-red-400"
     href={social.threads.href}
     rel="nofollow"
   >
-    <span class="sr-only">{t('socialMedia.threadsAlt')}</span>
+    <span class="sr-only">{t("socialMedia.threadsAlt")}</span>
     <Threads class="size-8" />
   </a>
   <a
@@ -28,7 +28,7 @@ const t = useTranslations(locale);
     href={social.instagram.href}
     rel="nofollow"
   >
-    <span class="sr-only">{t('socialMedia.instagramAlt')}</span>
+    <span class="sr-only">{t("socialMedia.instagramAlt")}</span>
     <Instagram class="size-8" />
   </a>
 </div>
