--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,9 @@
 ---
-import type { ImageMetadata } from 'astro';
-import Footer from '../components/Footer.astro';
-import Head from '../components/Head.astro';
-import Header from '../components/Header.astro';
-import { getLocaleFromUrl, useTranslations } from '../utils/i18n';
+import type { ImageMetadata } from "astro";
+import Footer from "../components/Footer.astro";
+import Head from "../components/Head.astro";
+import Header from "../components/Header.astro";
+import { getLocaleFromUrl, useTranslations } from "../utils/i18n";
 
 interface Props {
   image?: ImageMetadata;
@@ -14,7 +14,7 @@ interface Props {
 const { image, imageAlt, title } = Astro.props;
 
 const locale = getLocaleFromUrl(Astro.url);
-const t = useTranslations(locale);
+const t = await useTranslations(locale, "layout");
 ---
 
 <html lang={locale}>
@@ -22,11 +22,11 @@ const t = useTranslations(locale);
   <body
     class="bg-gray-100 font-sans text-gray-900 subpixel-antialiased dark:bg-gray-900 dark:text-gray-100 dark:antialiased"
   >
-    <a class="sr-only focus:not-sr-only" href={`#${t('layout.main')}`}
-      >{t('layout.skipToContent')}</a
+    <a class="sr-only focus:not-sr-only" href={`#${t("main.id")}`}
+      >{t("skipToContent")}</a
     >
     <Header />
-    <main class="mx-auto max-w-prose px-4 py-10" id={t('layout.main')}>
+    <main class="mx-auto max-w-prose px-4 py-10" id={t("main.id")}>
       <slot />
     </main>
     <Footer />
