--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,15 +1,18 @@
 ---
 import {
   getLocaleFromUrl,
+  getRouteFromUrl,
   useTranslatedPath,
   useTranslations,
 } from "../utils/i18n";
+import locales from "../utils/i18n/config";
 import Logo from "./Logo.astro";
 import SocialMedia from "./SocialMedia.astro";
 
 const locale = getLocaleFromUrl(Astro.url);
 const t = await useTranslations(locale, "layout");
 const translatePath = useTranslatedPath(locale);
+const currentRoute = getRouteFromUrl(Astro.url);
 
 const termsNavigation = [
   {
@@ -24,11 +27,28 @@ const termsNavigation = [
 ---
 
 <footer>
+  <div class="my-12 flex flex-col items-center md:my-8">
+    {
+      locales
+        .filter((localeEntry) => localeEntry !== locale)
+        .map((localeEntry) => (
+          <a
+            class="text-red-950 hover:underline focus:underline dark:text-red-100"
+            href={translatePath(
+              currentRoute === "/" ? "/" : `/${currentRoute}`,
+              localeEntry,
+            )}
+          >
+            {t(`footer.locale.${localeEntry}`)}
+          </a>
+        ))
+    }
+  </div>
   <div
     class="mx-auto flex max-w-prose flex-col-reverse items-center justify-between px-4 py-10 sm:flex-row"
   >
     <div
-      class="flex flex-col items-center justify-start gap-4 sm:flex-row sm:gap-2"
+      class="my-12 flex flex-col items-center justify-start gap-4 sm:flex-row sm:gap-2 md:my-0"
     >
       <a
         class="text-gray-900 hover:text-red-700 focus:text-red-700 dark:text-gray-100 hover:dark:text-red-400 focus:dark:text-red-400"
