feat: update the Typekit web project

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -148,7 +148,7 @@ const currentRoute = getRouteFromUrl(Astro.url);
     })
   }
 
-  <link rel="stylesheet" href="https://use.typekit.net/jqe6omz.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/yvd6adl.css" />
 
   <script
     defer
