--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,5 +15,6 @@
     <main class="mx-auto max-w-prose px-4 py-10" id="{{ $main }}">
       {{ block "main" . }}{{ end }}
     </main>
+    {{ partial "footer.html" . }}
   </body>
 </html>
