--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -18,4 +18,24 @@
       {{ end }}
     </ul>
   {{ end }}
+  <div
+    class="mx-auto flex max-w-prose flex-col-reverse items-center justify-between px-4 py-10 sm:flex-row"
+  >
+    <div
+      class="my-12 flex flex-col items-center justify-start gap-4 sm:flex-row sm:gap-2 md:my-0"
+    >
+      {{ $homeURL := relLangURL "" }}
+      <a
+        class="text-gray-900 hover:text-red-700 focus:text-red-700 dark:text-gray-100 hover:dark:text-red-400 focus:dark:text-red-400"
+        href="{{ $homeURL }}"
+      >
+        {{ partial "icons/footer-logo.html" . }}
+      </a>
+      <span
+        >&copy;
+        {{ .Language.Params.CopyrightYear }}
+        {{ .Language.Params.Author -}}
+      </span>
+    </div>
+  </div>
 </footer>
