--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header>
   <div class="mx-auto flex max-w-prose items-center justify-between px-4 py-10">
-    {{ $homeUrl := relLangURL "" }}
-    <a class="text-xl hover:underline focus:underline" href="{{ $homeUrl }}">
+    {{ $homeURL := relLangURL "" }}
+    <a class="text-xl hover:underline focus:underline" href="{{ $homeURL }}">
       {{- if .IsHome -}}
         <h1>{{- .Site.Title -}}</h1>
       {{- else -}}
