--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -37,5 +37,8 @@
         {{ .Language.Params.Author -}}
       </span>
     </div>
+    <div>
+      {{ partial "footer-social-media.html" . }}
+    </div>
   </div>
 </footer>
