--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -31,7 +31,7 @@
       >
         {{ partial "icons/footer-logo.html" . }}
       </a>
-      <span>{{- .Site.Copyright | safeHTML -}}</span>
+      <span>{{- .Site.Copyright -}}</span>
     </div>
     <div>
       {{ partial "footer-social-media.html" . }}
