--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -35,6 +35,20 @@
     </div>
     <div>
       {{ partial "footer-social-media.html" . }}
+      <nav
+        class="mb-6 flex flex-col justify-center text-center sm:mb-0 sm:text-right"
+      >
+        {{- range .Site.Menus.terms -}}
+          <div class="my-2 sm:my-0">
+            <a
+              class="text-red-950 hover:underline focus:underline dark:text-red-100"
+              href="{{ .URL }}"
+            >
+              {{- .Name -}}
+            </a>
+          </div>
+        {{- end -}}
+      </nav>
     </div>
   </div>
 </footer>
