feat: post-process the CSS files in development

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -4,6 +4,8 @@
 
 {{ if hugo.IsProduction }}
   {{ $styles = $styles | minify | fingerprint | resources.PostProcess }}
+{{ else }}
+  {{ $styles = $styles | resources.PostProcess }}
 {{ end }}
 
 
