feat: change the analytics URL

--- a/layouts/partials/analytics.html
+++ b/layouts/partials/analytics.html
@@ -1,5 +1,5 @@
 <script
   defer
   data-domain="anttikivi.fi"
-  src="https://analytics.visiosto.fi/js/script.js"
+  src="https://plausible.visiosto.fi/js/script.js"
 ></script>
