fix: fix the OpenGraph information

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -44,7 +44,7 @@
   />
 {{ end }}
 
-{{ template "_internal/opengraph.html" . }}
+{{ partial "opengraph.html" . }}
 
 {{/* TODO: Add alternative locales */}}
 
