--- a/layouts/partials/analytics.html
+++ b/layouts/partials/analytics.html
@@ -4,6 +4,7 @@
   /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
   _paq.push(["trackPageView"]);
   _paq.push(["enableLinkTracking"]);
+  _paq.push(["requireCookieConsent"]);
   (function () {
     var u = "https://matomo.visiosto.fi/";
     _paq.push(["setTrackerUrl", u + "matomo.php"]);
