feat: change fonts and use Google Fonts instead of Typekit

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <section
-    class="prose prose-lg dark:prose-invert hover:prose-a:text-red-700 focus:prose-a:text-red-700 prose-em:ml-0.5 prose-em:font-serif hover:dark:prose-a:text-red-400 focus:dark:prose-a:text-red-400"
+    class="prose prose-lg dark:prose-invert hover:prose-a:text-red-700 focus:prose-a:text-red-700 prose-em:font-serif prose-em:not-italic hover:dark:prose-a:text-red-400 focus:dark:prose-a:text-red-400"
   >
     {{ .Content }}
   </section>
