--- a/layouts/partials/fonts.html
+++ b/layouts/partials/fonts.html
@@ -1,1 +1,6 @@
-<link rel="stylesheet" href="https://use.typekit.net/yvd6adl.css" />
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@700&family=Manrope:wght@200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display&display=swap"
+  rel="stylesheet"
+/>
