--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,7 @@
     {{ $homeURL := relLangURL "" }}
     <a class="text-xl hover:underline focus:underline" href="{{ $homeURL }}">
       {{- if .IsHome -}}
-        <h1>{{- .Site.Title -}}</h1>
+        <h1 class="font-display">{{- .Site.Title -}}</h1>
       {{- else -}}
         {{- .Site.Title -}}
       {{- end -}}
