--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,1 +1,11 @@
-{{ define "main" }}{{ end }}
+{{ define "main" }}
+  {{ $headless := .Site.GetPage "/home" }}
+  {{ $preface := $headless.Resources.Match "preface*.md" }}
+  {{ range $preface }}
+    <section
+      class="prose prose-lg dark:prose-invert prose-a:font-normal hover:prose-a:text-red-700 focus:prose-a:text-red-700 prose-em:font-serif prose-em:font-normal prose-em:italic hover:dark:prose-a:text-red-400 focus:dark:prose-a:text-red-400"
+    >
+      {{ .Content }}
+    </section>
+  {{ end }}
+{{ end }}
