--- a/assets/main.css
+++ b/assets/main.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    font-synthesis-weight: none;
+  }
+}
+
+.font-sans {
+  font-optical-sizing: auto;
+}
