feat: use a custom `container` instead of the default provided by Tailwind and use it for sizing the contents

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,7 +12,7 @@
       {{- T "skipToContent" -}}
     </a>
     {{ partial "header.html" . }}
-    <main class="mx-auto max-w-prose px-4 py-10" id="{{ $main }}">
+    <main id="{{ $main }}">
       {{ block "main" . }}{{ end }}
     </main>
     {{ partial "footer.html" . }}
