--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,14 +1,10 @@
 {{ define "main" }}
   <section
-    class="prose prose-lg dark:prose-invert prose-a:font-normal hover:prose-a:text-red-700 focus:prose-a:text-red-700 prose-em:ml-0.5 prose-em:font-serif hover:dark:prose-a:text-red-400 focus:dark:prose-a:text-red-400"
+    class="prose prose-lg container dark:prose-invert prose-a:font-normal hover:prose-a:text-red-700 focus:prose-a:text-red-700 hover:dark:prose-a:text-red-400 focus:dark:prose-a:text-red-400"
   >
-    <h1 class="not-prose mx-8 my-6 text-center font-mono text-6xl font-bold">
-      404
-    </h1>
+    <h1 class="not-prose my-6 text-center font-mono text-6xl font-bold">404</h1>
     <div lang="fi">
-      <h2
-        class="not-prose mx-8 mb-10 mt-6 text-center font-mono text-3xl font-bold"
-      >
+      <h2 class="not-prose mb-10 mt-6 text-center font-mono text-3xl font-bold">
         Ei löydy
       </h2>
       {{ $homeURL := relLangURL "" }}
@@ -19,9 +15,7 @@
       </p>
     </div>
     <div class="mt-10" lang="en">
-      <h2
-        class="not-prose mx-8 mb-10 mt-6 text-center font-mono text-3xl font-bold"
-      >
+      <h2 class="not-prose mb-10 mt-6 text-center font-mono text-3xl font-bold">
         Not Found
       </h2>
       {{ $homeURL = relURL "en/" }}
