--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,73 +1,75 @@
 <footer>
-  {{ if .IsTranslated }}
-    {{ $languageMenuLabel := T "languageMenuLabel" . }}
-    <ul
-      class="my-12 flex flex-col items-center md:my-8"
-      role="menu"
-      aria-label="{{ $languageMenuLabel }}"
-    >
-      {{ range .Translations }}
-        <li lang="{{ .Language.LanguageCode }}" role="menuitem">
-          <a
-            class="text-red-950 hover:underline focus:underline dark:text-red-100"
-            href="{{ .RelPermalink }}"
-          >
-            {{- .Language.Params.SwitchTo -}}
-          </a>
-        </li>
-      {{ end }}
-    </ul>
-  {{ end }}
-  <div
-    class="mx-auto flex max-w-prose flex-col-reverse items-center justify-between px-4 py-10 sm:flex-row"
-  >
-    <div
-      class="my-12 flex flex-col items-center justify-start gap-4 sm:flex-row sm:gap-2 md:my-0"
-    >
-      {{ $homeURL := relLangURL "" }}
-      <a
-        class="text-gray-900 hover:text-red-700 focus:text-red-700 dark:text-gray-100 hover:dark:text-red-400 focus:dark:text-red-400"
-        href="{{ $homeURL }}"
+  <div class="container">
+    {{ if .IsTranslated }}
+      {{ $languageMenuLabel := T "languageMenuLabel" . }}
+      <ul
+        class="my-12 flex flex-col items-center md:my-8"
+        role="menu"
+        aria-label="{{ $languageMenuLabel }}"
       >
-        {{ partial "logo/logo.html" . }}
-      </a>
-      <span>{{- .Site.Copyright -}}</span>
-    </div>
-    <div>
-      <div class="flex flex-row justify-center gap-6 sm:justify-end">
+        {{ range .Translations }}
+          <li lang="{{ .Language.LanguageCode }}" role="menuitem">
+            <a
+              class="text-red-950 hover:underline focus:underline dark:text-red-100"
+              href="{{ .RelPermalink }}"
+            >
+              {{- .Language.Params.SwitchTo -}}
+            </a>
+          </li>
+        {{ end }}
+      </ul>
+    {{ end }}
+    <div
+      class="flex flex-col-reverse items-center justify-between py-10 sm:flex-row"
+    >
+      <div
+        class="my-12 flex flex-col items-center justify-start gap-4 sm:flex-row sm:gap-2 md:my-0"
+      >
+        {{ $homeURL := relLangURL "" }}
         <a
-          class="hover:text-red-700 focus:text-red-700 hover:dark:text-red-400 focus:dark:text-red-400"
-          href="{{ .Site.Params.SocialMedia.ThreadsLink }}"
-          rel="nofollow"
+          class="text-gray-900 hover:text-red-700 focus:text-red-700 dark:text-gray-100 hover:dark:text-red-400 focus:dark:text-red-400"
+          href="{{ $homeURL }}"
         >
-          <span class="sr-only">{{- T "threadsLogoAlt" -}}</span>
-          {{ partial "icons/threads-logo.html" }}
+          {{ partial "logo/logo.html" . }}
         </a>
-        <a
-          class="hover:text-red-700 focus:text-red-700 hover:dark:text-red-400 focus:dark:text-red-400"
-          href="{{ .Site.Params.SocialMedia.InstagramLink }}"
-          rel="nofollow"
-        >
-          <span class="sr-only">{{- T "instagramLogoAlt" -}}</span>
-          {{ partial "icons/instagram-logo.html" }}
-        </a>
+        <span>{{- .Site.Copyright -}}</span>
       </div>
-      {{ if false }}
-        <nav
-          class="mb-6 flex flex-col justify-center text-center sm:mb-0 sm:text-right"
-        >
-          {{- range .Site.Menus.terms -}}
-            <div class="my-2 sm:my-0">
-              <a
-                class="text-red-950 hover:underline focus:underline dark:text-red-100"
-                href="{{ .URL }}"
-              >
-                {{- .Name -}}
-              </a>
-            </div>
-          {{- end -}}
-        </nav>
-      {{ end }}
+      <div>
+        <div class="flex flex-row justify-center gap-6 sm:justify-end">
+          <a
+            class="hover:text-red-700 focus:text-red-700 hover:dark:text-red-400 focus:dark:text-red-400"
+            href="{{ .Site.Params.SocialMedia.ThreadsLink }}"
+            rel="nofollow"
+          >
+            <span class="sr-only">{{- T "threadsLogoAlt" -}}</span>
+            {{ partial "icons/threads-logo.html" }}
+          </a>
+          <a
+            class="hover:text-red-700 focus:text-red-700 hover:dark:text-red-400 focus:dark:text-red-400"
+            href="{{ .Site.Params.SocialMedia.InstagramLink }}"
+            rel="nofollow"
+          >
+            <span class="sr-only">{{- T "instagramLogoAlt" -}}</span>
+            {{ partial "icons/instagram-logo.html" }}
+          </a>
+        </div>
+        {{ if false }}
+          <nav
+            class="mb-6 flex flex-col justify-center text-center sm:mb-0 sm:text-right"
+          >
+            {{- range .Site.Menus.terms -}}
+              <div class="my-2 sm:my-0">
+                <a
+                  class="text-red-950 hover:underline focus:underline dark:text-red-100"
+                  href="{{ .URL }}"
+                >
+                  {{- .Name -}}
+                </a>
+              </div>
+            {{- end -}}
+          </nav>
+        {{ end }}
+      </div>
     </div>
   </div>
 </footer>
