--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="mx-auto flex max-w-prose items-center justify-between px-4 py-10">
+  <div class="container flex items-center justify-between py-10">
     {{ $homeURL := relLangURL "" }}
     <a class="text-xl hover:underline focus:underline" href="{{ $homeURL }}">
       {{- if .IsHome -}}
