feat: change the primary color to green

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <section
-    class="prose prose-lg container dark:prose-invert prose-a:font-normal hover:prose-a:text-red-700 focus:prose-a:text-red-700 hover:dark:prose-a:text-red-400 focus:dark:prose-a:text-red-400"
+    class="prose prose-lg container dark:prose-invert prose-a:font-normal hover:prose-a:text-green-700 focus:prose-a:text-green-700 hover:dark:prose-a:text-green-400 focus:dark:prose-a:text-green-400"
   >
     <h1 class="not-prose my-6 text-center font-mono text-6xl font-bold">404</h1>
     <div lang="fi">
