--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,7 +10,7 @@
         {{ range .Translations }}
           <li lang="{{ .Language.LanguageCode }}" role="menuitem">
             <a
-              class="text-red-950 hover:underline focus:underline dark:text-red-100"
+              class="text-green-950 hover:underline focus:underline dark:text-green-100"
               href="{{ .RelPermalink }}"
             >
               {{- .Language.Params.SwitchTo -}}
@@ -27,7 +27,7 @@
       >
         {{ $homeURL := relLangURL "" }}
         <a
-          class="logo text-gray-900 hover:text-red-700 focus:text-red-700 dark:text-gray-100 hover:dark:text-red-400 focus:dark:text-red-400"
+          class="logo text-gray-900 hover:text-green-700 focus:text-green-700 dark:text-gray-100 hover:dark:text-green-400 focus:dark:text-green-400"
           href="{{ $homeURL }}"
         >
           {{ partial "logo/logo.html" . }}
@@ -37,7 +37,7 @@
       <div>
         <div class="flex flex-row justify-center gap-6 sm:justify-end">
           <a
-            class="hover:text-red-700 focus:text-red-700 hover:dark:text-red-400 focus:dark:text-red-400"
+            class="hover:text-green-700 focus:text-green-700 hover:dark:text-green-400 focus:dark:text-green-400"
             href="{{ .Site.Params.SocialMedia.ThreadsLink }}"
             rel="nofollow"
           >
@@ -45,7 +45,7 @@
             {{ partial "icons/threads-logo.html" }}
           </a>
           <a
-            class="hover:text-red-700 focus:text-red-700 hover:dark:text-red-400 focus:dark:text-red-400"
+            class="hover:text-green-700 focus:text-green-700 hover:dark:text-green-400 focus:dark:text-green-400"
             href="{{ .Site.Params.SocialMedia.InstagramLink }}"
             rel="nofollow"
           >
@@ -53,7 +53,7 @@
             {{ partial "icons/instagram-logo.html" }}
           </a>
           <a
-            class="hover:text-red-700 focus:text-red-700 hover:dark:text-red-400 focus:dark:text-red-400"
+            class="hover:text-green-700 focus:text-green-700 hover:dark:text-green-400 focus:dark:text-green-400"
             href="{{ .Site.Params.SocialMedia.GithubLink }}"
             rel="nofollow"
           >
@@ -68,7 +68,7 @@
             {{- range .Site.Menus.terms -}}
               <div class="my-2 sm:my-0">
                 <a
-                  class="text-red-950 hover:underline focus:underline dark:text-red-100"
+                  class="text-green-950 hover:underline focus:underline dark:text-green-100"
                   href="{{ .URL }}"
                 >
                   {{- .Name -}}
