feat: add the test Plausible script to the `head`

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -87,3 +87,5 @@
   {{ $script := $bundle | js.Build $opts }}
   <script src="{{ $script.RelPermalink }}" defer></script>
 {{ end }}
+
+<script defer data-domain="anttikivi.fi" src="https://plausible-staging.visiosto.fi/js/script.js"></script>
