feat: add the new analytics script to the `head`

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -88,4 +88,9 @@
   <script src="{{ $script.RelPermalink }}" defer></script>
 {{ end }}
 
-<script defer data-domain="anttikivi.fi" src="https://plausible-staging.visiosto.fi/js/script.js"></script>
+
+<script
+  defer
+  data-domain="anttikivi.fi"
+  src="https://tullius.visiosto.fi/js/script.js"
+></script>
