--- a/layouts/404.html
+++ b/layouts/404.html
@@ -3,28 +3,33 @@
     class="prose prose-lg container dark:prose-invert prose-a:font-normal hover:prose-a:text-green-700 hover:prose-a:no-underline focus:prose-a:text-green-700 focus:prose-a:no-underline hover:dark:prose-a:text-green-400 focus:dark:prose-a:text-green-400"
   >
     <h1 class="not-prose my-6 text-center font-mono text-6xl font-bold">404</h1>
-    <div lang="fi">
-      <h2 class="not-prose mb-10 mt-6 text-center font-mono text-3xl font-bold">
-        Ei löydy
-      </h2>
-      {{ $homeURL := relLangURL "" }}
-      <p>
-        Etsimääsi sivua ei löytynyt. Tämä voi johtua siitä, että sivu on
-        poistettu tai sen osoite on muuttunut. Voit palata
-        <a href="{{ $homeURL }}">etusivulle</a>.
-      </p>
-    </div>
-    <div class="mt-10" lang="en">
-      <h2 class="not-prose mb-10 mt-6 text-center font-mono text-3xl font-bold">
-        Not Found
-      </h2>
-      {{ $homeURL = relURL "en/" }}
-      <p>
-        The page you are looking for could not be found. This could be because
-        the page has been removed or the address has changed. You can return to
-        the
-        <a href="{{ $homeURL }}">home page</a>.
-      </p>
-    </div>
+    {{ range .Site.Languages }}
+      <div lang="fi">
+        <h2 class="not-prose my-10 text-center font-mono text-3xl font-bold">
+          {{ if hasPrefix .LanguageCode "fi" }}
+            Ei löydy
+          {{ else if hasPrefix .LanguageCode "en" }}
+            Not Found
+          {{ end }}
+        </h2>
+        {{ $homeURL := relLangURL "" }}
+        {{ if hasPrefix .LanguageCode "fi" }}
+          {{ $homeURL = relLangURL "" }}
+          <p>
+            Etsimääsi sivua ei löytynyt. Tämä voi johtua siitä, että sivu on
+            poistettu tai sen osoite on muuttunut. Voit palata
+            <a href="{{ $homeURL }}">etusivulle</a>.
+          </p>
+        {{ else if hasPrefix .LanguageCode "en" }}
+          {{ $homeURL = relURL "en/" }}
+          <p>
+            The page you are looking for could not be found. This could be
+            because the page has been removed or the address has changed. You
+            can return to the
+            <a href="{{ $homeURL }}">home page</a>.
+          </p>
+        {{ end }}
+      </div>
+    {{ end }}
   </section>
 {{ end }}
