fix: explicitly check if the language is disabled on 404 page

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -4,32 +4,34 @@
   >
     <h1 class="not-prose my-6 text-center font-mono text-6xl font-bold">404</h1>
     {{ range .Site.Languages }}
-      <div lang="fi">
-        <h2 class="not-prose my-10 text-center font-mono text-3xl font-bold">
+      {{ if not .Disabled }}
+        <div lang="{{ .LanguageCode }}">
+          <h2 class="not-prose my-10 text-center font-mono text-3xl font-bold">
+            {{ if hasPrefix .LanguageCode "fi" }}
+              Ei löydy
+            {{ else if hasPrefix .LanguageCode "en" }}
+              Not Found
+            {{ end }}
+          </h2>
+          {{ $homeURL := relLangURL "" }}
           {{ if hasPrefix .LanguageCode "fi" }}
-            Ei löydy
+            {{ $homeURL = relLangURL "" }}
+            <p>
+              Etsimääsi sivua ei löytynyt. Tämä voi johtua siitä, että sivu on
+              poistettu tai sen osoite on muuttunut. Voit palata
+              <a href="{{ $homeURL }}">etusivulle</a>.
+            </p>
           {{ else if hasPrefix .LanguageCode "en" }}
-            Not Found
+            {{ $homeURL = relURL "en/" }}
+            <p>
+              The page you are looking for could not be found. This could be
+              because the page has been removed or the address has changed. You
+              can return to the
+              <a href="{{ $homeURL }}">home page</a>.
+            </p>
           {{ end }}
-        </h2>
-        {{ $homeURL := relLangURL "" }}
-        {{ if hasPrefix .LanguageCode "fi" }}
-          {{ $homeURL = relLangURL "" }}
-          <p>
-            Etsimääsi sivua ei löytynyt. Tämä voi johtua siitä, että sivu on
-            poistettu tai sen osoite on muuttunut. Voit palata
-            <a href="{{ $homeURL }}">etusivulle</a>.
-          </p>
-        {{ else if hasPrefix .LanguageCode "en" }}
-          {{ $homeURL = relURL "en/" }}
-          <p>
-            The page you are looking for could not be found. This could be
-            because the page has been removed or the address has changed. You
-            can return to the
-            <a href="{{ $homeURL }}">home page</a>.
-          </p>
-        {{ end }}
-      </div>
+        </div>
+      {{ end }}
     {{ end }}
   </section>
 {{ end }}
